--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,26 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  username: heri
+  password: <%= ENV['SCHEDULED_TWEETS_DATABASE_PASSWORD'] %>
+
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: scheduled_tweets_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: scheduled_tweets_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: scheduled_tweets_production
+  username: heri
+  password: <%= ENV["SCHEDULED_TWEETS_DATABASE_PASSWORD"] %>
